# Python-Ast-Optimizer

./: .flake8  .gitignore  .isort.cfg  .mypy.ini  .ruff.toml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements_dev.txt  version.txt
.github/workflows/: tag-and-release.yml
personal_python_ast_optimizer/: __init__.py  _log.py  _typing.py  config.py  futures.py  minifier.py  python_info.py  run.py  typing.py
personal_python_ast_optimizer/_optimize/: __init__.py  _base.py  base.py  transformers.py  transformers_base.py  typing.py  utils.py  visitors.py
personal_python_ast_optimizer/parser/: _base.py  config.py  machine_info.py  minifier.py  run.py  skipper.py  utils.py
personal_python_ast_optimizer/regex/: __init__.py  apply.py  classes.py  replace.py
tests/: test_config.py  test_minifier.py  utils.py
tests/optimizer/: test_collection_concat_to_unpack.py  test_config_collection_concat_to_unpack.py  test_config_fold_constants.py  test_config_fold_function_locals.py  test_config_names_to_fold.py  test_config_simplify_named_tuple.py  test_config_skip_assert.py  test_config_skip_dangling_expressions.py  test_config_skip_overload_functions.py  test_config_skip_type_hints_and_generics.py  test_config_skip_typing_cast.py  test_config_skip_unused_imports.py  test_config_token_types_to_skip.py  test_node_bool_op.py  test_node_compare.py  test_node_function.py  test_node_if.py  test_node_import.py  test_node_try.py  test_node_unary_op.py  test_node_while.py  test_skip_type_hints_and_generics.py  test_target_python_version.py  test_warn_not_found_skips.py  test_weird_input.py
tests/parser/: test_and_or.py  test_assert.py  test_assign.py  test_class.py  test_collections.py  test_constant_folding.py  test_continue.py  test_delete.py  test_enum_folding.py  test_exception.py  test_excludes.py  test_function_locals.py  (+18 more)
(+1 files in other folders)
