[project]
authors         = [
    {name = "James Demetris"},
]
name            = "personal-python-ast-optimizer"
readme          = "README.md"
requires-python = ">=3.12"
dynamic         = ["version"]

[tool.mypy]
ignore_missing_imports = true  # Handled by ruff
check_untyped_defs = true

[tool.setuptools.dynamic]
version         = {file = "version.txt"}
