[project]
authors         = [
    {name = "James Demetris"},
]
name            = "personal-python-ast-optimizer"
readme          = "README.md"
requires-python = ">=3.12"
dynamic         = ["version"]

[tool.mypy]
ignore_missing_imports = true  # Handled by ruff
check_untyped_defs = true

[tool.pytest]
pythonpath = ["personal_python_ast_optimizer"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.dynamic]
version         = {file = "version.txt"}
