[project]
authors         = [
    {name = "James Demetris"},
]
name            = "personal-python-ast-optimizer"
readme          = "README.md"
requires-python = ">=3.12"
dynamic         = ["version"]

[tool.mypy]
exclude = "build/"
ignore_missing_imports = true  # Handled by ruff
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = false  # All false-positives
no_implicit_reexport = false
strict_equality = true
strict_bytes = true
extra_checks = true

[[tool.mypy.overrides]]
module = "tests/*"
disable_error_code = ["no-untyped-def"]

[tool.pytest]
pythonpath = ["personal_python_ast_optimizer"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.dynamic]
version         = {file = "version.txt"}
